--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "koa-bodyparser": "^4.3.0",
     "koa-connect": "^2.1.0",
     "koa-router": "^10.0.0",
-    "sqlite3": "^5.0.0"
+    "sqlite3": "^5.0.0",
+    "supertest": "^6.0.1"
   },
   "devDependencies": {
     "jest": "^26.6.3",
