--- a/package.json
+++ b/package.json
@@ -36,12 +36,12 @@
     "koa-bodyparser": "^4.3.0",
     "koa-connect": "^2.1.0",
     "koa-router": "^10.0.0",
-    "sqlite3": "^5.0.0",
-    "supertest": "^6.0.1"
+    "sqlite3": "^5.0.0"
   },
   "devDependencies": {
     "jest": "^26.6.3",
     "nodemon": "^2.0.6",
-    "prettier": "^1.17.1"
+    "prettier": "^1.17.1",
+    "supertest": "^6.0.1"
   }
 }
