--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "koa-bodyparser": "^4.3.0",
     "koa-connect": "^2.1.0",
     "koa-router": "^10.0.0",
+    "node-fetch": "^2.6.1",
     "sqlite3": "^5.0.0"
   },
   "devDependencies": {
